package com.pablozoani.designpattern.z_trash.models.house.rooms;

public enum RoomType {
    BATHROOM, BEDROOM, DINING_ROOM, KITCHEN, LIVING_ROOM
}
